welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: Missing closing brace `}' assumed here
var message = ""
^BDRBuggle:1: error: Missing closing brace `}' assumed here
var message = ""
^BDRBuggle:1: error: expected class or object definition
var message = ""
^BDRBuggle:2: error: expected class or object definition
var fini = false
^BDRBuggle:3: error: expected class or object definition
while(fini == false) {
^BDRBuggle:21: error: Missing closing brace `}' assumed here
  }
  ^BDRBuggle:25: error: Missing closing brace `}' assumed here
  }
  ^BDRBuggle:30: error: Missing closing brace `}' assumed here
  }
  ^BDRBuggle:36: error: Missing closing brace `}' assumed here
  }
  ^BDRBuggle:40: error: Missing closing brace `}' assumed here
  }
  ^